feat: Add social media links to configuration

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,17 @@ languageCode = 'en-us'
 title = 'cmnemoi | Software & ML Engineering'
 theme = 'hello-friend-ng'
 
+[params]
+  # Ajoutez vos autres paramètres ici si nécessaire
+
+[[params.social]]
+  name = "github"
+  url = "https://github.com/cmnemoi"
+
+[[params.social]]
+  name = "linkedin"
+  url = "https://www.linkedin.com/in/madi-mnemoi-charles-meldhine-python/"
+
 [[menu.main]]
     identifier = "blog"
     name       = "Blog"
